Fixed a bug where there was a horizontal gap between each row of images in the gallery section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -527,6 +527,7 @@ q {
     width: 100%;
     height: 300px;
     object-fit: cover;
+    display: block;
 }
 
 /* Location section */
